"fixed some layout issues"

--- a/ecommerceWebsite/src/components/Products/Product/product.scss
+++ b/ecommerceWebsite/src/components/Products/Product/product.scss
@@ -7,7 +7,7 @@
     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
     padding: 10px;
     @include md{
-        width: calc(25% - 15px);
+        width: 300px;
         margin: 0px;
     }
     border-radius: 10px;
