--- a/ecommerceWebsite/src/components/Products/products.scss
+++ b/ecommerceWebsite/src/components/Products/products.scss
@@ -7,6 +7,7 @@
     margin: 50px auto;
     @include md{
         margin: 75px auto;
+        
     }
     .sec-heading{
         font-size: 18px;
@@ -30,9 +31,9 @@
   .products{
     display: flex;
     flex-flow: wrap;
-    gap: 10px;
+    gap: 5px;
     @include md{
-        gap: 20px;
+        gap: 10px;
     }
   }
 }
