--- a/ecommerceWebsite/src/pages/Search/search.scss
+++ b/ecommerceWebsite/src/pages/Search/search.scss
@@ -10,7 +10,7 @@
         margin: 50px auto;
         @include md{
             margin: 75px auto;
-            max-width: 1200px;
+            max-width: 1400px;
         }
         .searchbar{
             margin: 0 auto;
