--- a/ecommerceWebsite/src/pages/SingleCategory/singlecategory.scss
+++ b/ecommerceWebsite/src/pages/SingleCategory/singlecategory.scss
@@ -10,7 +10,7 @@
         width: calc(100% - 20px);
         margin: 0 auto;
         @include md{
-            max-width: 1200px;
+            max-width: 1500px;
         }
     }
     .category-title{
